added html structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,67 @@
     />
   </head>
   <body>
-    <div class="container">Weather Forecast</div>
+    <div class="container">
+      <div class="weather-app">
+        <form>
+          <input type="text" placeholder="Enter a city" autocomplete="on" />
+          <input type="submit" value="Search" />
+        </form>
+       
+<div class="row">
+          <div class="col-6">
+            <h1>Ericeira</h1>
+            <ul>
+              <li>Friday 25th March, 15:00</li>
+              <li>22 ℃ | ℉ </li>
+          
+            </ul>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>☼ Sunny</li>
+              <li>💨 15mph</li>
+              <li>🌧 0%</li>
+            </ul>
+          </div>
+
+
+
+      <div class="3-day-forecast">
+        <div class="row">
+          <div class="col-4">
+            <ul>
+              <li>☼</li>
+              <li>Sat</li>
+              <li>17℃</li>
+              <li>62℉</li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <ul>
+              <li>☁️</li>
+              <li>Sun</li>
+              <li>16℃</li>
+              <li>60℉</li>
+            </ul>
+          </div>
+          <div class="col-4">
+            <ul>
+              <li>🌧</li>
+              <li>Mon</li>
+              <li>13℃</li>
+              <li>55℉</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <small>
+      <a href="https://majestic-unicorn-56669b.netlify.app/" target="_blank">
+        Open source code
+      </a>
+      by Ilze Rieba
+    </small>
     <script src="src/app.js"></script>
   </body>
 </html>
