updated 3 day forecast font style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      <span class="forecast-icon">
  <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/day-sunny.png" alt="cloudy" width="35px 35px">
               </span>
-              <li>Sat</li>
+              <li class="forecast-day-styling">Sat</li>
               <li>16℃</li>
               <li>60℉</li>
             </ul>
@@ -60,7 +60,7 @@
      <span class="forecast-icon">
  <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/day-sunny.png" alt="cloudy" width="35px 35px">
               </span>
-              <li>Sun</li>
+              <li class="forecast-day-styling">Sun</li>
               <li>16℃</li>
               <li>60℉</li>
             </ul>
@@ -71,7 +71,7 @@
   <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/cloud-rain.png" alt="rain" width="35px 35px">
  </span>  
              
-              <li>Mon</li>
+              <li class="forecast-day-styling">Mon</li>
               <li>13℃</li>
               <li>55℉</li>
             </ul>
