testing solutions to fix the issue with images

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="col-6">
             <ul>
-              <li class="current-conditions"> <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/sunny.PNG" alt="sunny" width="20px 20px"> Sunny</li>
+              <li class="current-conditions"> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.onlinewebfonts.com%2Ficon%2F80517&psig=AOvVaw1NhWRa7OAgl6WvRJuZkkKE&ust=1648893948879000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJj_1OPO8vYCFQAAAAAdAAAAABAP" alt="sunny" width="20px 20px"> Sunny</li>
               <li class="current-wind-speed"><img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/wind.PNG" alt="windspeed" width="20px 20px">15mph</li>
               <li class="current-rain-chance"><img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="rain" width="20px 20px"> 0%</li>
             </ul>
