--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="col-6">
             <ul>
-              <li class="current-conditions"> <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.onlinewebfonts.com%2Ficon%2F80517&psig=AOvVaw1NhWRa7OAgl6WvRJuZkkKE&ust=1648893948879000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCJj_1OPO8vYCFQAAAAAdAAAAABAP" alt="sunny" width="20px 20px"> Sunny</li>
+              <li class="current-conditions"> <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/sunny.PNG" alt="sunny" width="20px 20px"> Sunny</li>
               <li class="current-wind-speed"><img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/wind.PNG" alt="windspeed" width="20px 20px">15mph</li>
               <li class="current-rain-chance"><img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="rain" width="20px 20px"> 0%</li>
             </ul>
@@ -51,7 +51,7 @@
         <div class="row">
  <div class="col-4">
      <span class="forecast-icon">
- <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/sunny.PNG" alt="cloudy" width="35px 35px">
+ <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="cloudy" width="35px 35px">
               </span>
               <li class="forecast-day-styling">Sat</li>
               <li>16℃</li>
@@ -60,7 +60,7 @@
  </div>
           <div class="col-4">
      <span class="forecast-icon">
- <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/sunny.PNG" alt="cloudy" width="35px 35px">
+ <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="cloudy" width="35px 35px">
               </span>
               <li class="forecast-day-styling">Sun</li>
               <li>16℃</li>
@@ -70,7 +70,7 @@
           <div class="col-4">
             <ul>
                 <span class="forecast-icon">
-  <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/rain.PNG" alt="rain" width="35px 35px">
+  <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="rain" width="35px 35px">
  </span>  
              
               <li class="forecast-day-styling">Mon</li>
