--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="col-6">
             <h1 id="city"></h1>
             <ul>
-              <li class="current-date-time">Friday 25th March, 15:00</li>
+              <li class="current-date-time">Last updated : <span id="date"></span> </li>
               <strong
               id="current-temperature"> </strong> <span class="current-celsius-temp"> ℃ | </span> <span class="current-farenheit-temp"> ℉ </span>
       
