--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <div class="container">
       <div class="weather-app">
-        <form>
-          <input class="search-box" type="text" placeholder="Enter a city" autocomplete="on" />
+        <form id="search-form">
+          <input class="search-box" type="text" placeholder="Enter a city" autocomplete="off" id="city-input" />
           <input class="search-button" type="submit" value="Search" />
         </form>
        
