--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  
   
               <strong
-              id="current-temperature"> </strong> <span class="current-celsius-temp"> ℃ | </span> <span class="current-farenheit-temp"> ℉ </span>
+              id="current-temperature"> </strong> <span class="current-celsius-temp"> ℃ | </span> <span class="current-farenheit-temp"> <a href="#" id="fahrenheit-link">℉ </a> </span>
       
 <span class="current-icon">
               <img src="" 
