--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-     <link rel="stylesheet" href="src/style.css" />
+  
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-     
+      <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="weather-app-wrapper">
@@ -64,7 +64,10 @@
         <div class="row">
  <div class="col-4">
      <span class="forecast-icon">
- <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="cloudy" width="35px 35px">
+               <img src="http://openweathermap.org/img/wn/10d@2x.png" 
+  alt="" 
+
+  width="70px 70px"></span>
               </span>
               <li class="forecast-day-styling">Sat</li>
               <li>16℃</li>
@@ -73,7 +76,10 @@
  </div>
           <div class="col-4">
      <span class="forecast-icon">
- <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="cloudy" width="35px 35px">
+               <img src="http://openweathermap.org/img/wn/10d@2x.png" 
+  alt="" 
+
+  width="70px 70px"></span>
               </span>
               <li class="forecast-day-styling">Sun</li>
               <li>16℃</li>
@@ -83,7 +89,9 @@
           <div class="col-4">
             <ul>
                 <span class="forecast-icon">
-  <img src="/Users/ilzerieba/Desktop/Coding/Git/shecodes_vanilla_weather_app/files/water.PNG" alt="rain" width="35px 35px">
+                <img src="http://openweathermap.org/img/wn/10d@2x.png" 
+  alt="" 
+  width="70px 70px"></span>
  </span>  
              
               <li class="forecast-day-styling">Mon</li>
