updated weather forecast html and css

--- a/index.html
+++ b/index.html
@@ -60,45 +60,26 @@
           </div>
 
 
-      <div class="three-day-forecast">
+      <div class="weather-forecast">
         <div class="row">
- <div class="col-4">
+ <div class="col-3">
      <span class="forecast-icon">
                <img src="http://openweathermap.org/img/wn/10d@2x.png" 
   alt="" 
 
   width="70px 70px"></span>
               </span>
-              <li class="forecast-day-styling">Sat</li>
-              <li>16℃</li>
-              <li>60℉</li>
-            </ul>
- </div>
-          <div class="col-4">
-     <span class="forecast-icon">
-               <img src="http://openweathermap.org/img/wn/10d@2x.png" 
-  alt="" 
-
-  width="70px 70px"></span>
-              </span>
-              <li class="forecast-day-styling">Sun</li>
-              <li>16℃</li>
-              <li>60℉</li>
-            </ul>
- </div>
-          <div class="col-4">
-            <ul>
-                <span class="forecast-icon">
-                <img src="http://openweathermap.org/img/wn/10d@2x.png" 
-  alt="" 
-  width="70px 70px"></span>
- </span>  
-             
-              <li class="forecast-day-styling">Mon</li>
-              <li>13℃</li>
-              <li>55℉</li>
-            </ul>
-          </div>
+  <ul>
+    <li class="weather-forecast-day">
+      Friday
+      <div class="weather-forecast-temperature-max">
+        18
+      </div>
+      <div class="weather-forecast-temperature-min">
+        12
+      </div>
+    </li>
+  </ul>
         </div>
       </div>
     </div>
