--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
           </div>
 
 
-      <div class="weather-forecast">
+      <div>
         <div class="row">
  <div class="col-3">
      <span class="forecast-icon">
                <img src="http://openweathermap.org/img/wn/10d@2x.png" 
   alt="" 
-
-  width="70px 70px"></span>
-              </span>
-  <ul>
+  width="70px 70px">
+</span>
+          
+  <ul class="weather-forecast">
     <li class="weather-forecast-day">
       Friday
       <div class="weather-forecast-temperature-max">
-        18
-      </div>
+        18℃
+            </div>
       <div class="weather-forecast-temperature-min">
-        12
+        12℃
       </div>
     </li>
   </ul>
