created a new function display weather forecast and moved html to js

--- a/index.html
+++ b/index.html
@@ -60,30 +60,8 @@
           </div>
 
 
-      <div>
-        <div class="row">
- <div class="col-3">
-     <span class="forecast-icon">
-               <img src="http://openweathermap.org/img/wn/10d@2x.png" 
-  alt="" 
-  width="70px 70px">
-</span>
-          
-  <ul class="weather-forecast">
-    <li class="weather-forecast-day">
-      Friday
-      <div class="weather-forecast-temperature-max">
-        18℃
-            </div>
-      <div class="weather-forecast-temperature-min">
-        12℃
-      </div>
-    </li>
-  </ul>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast">
     </div>
-
     </div>
     
       <div class="footnote">
