--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
  
   
               <strong
-              id="current-temperature"> </strong> <span class="current-celsius-temp"> <a href="#" id="celsius-link" class="active">℃ </a>|</span> <span class="current-farenheit-temp"> <a href="#" id="fahrenheit-link">℉ </a> </span>
+              id="current-temperature"> </strong> <span class="current-celsius-temp">℃</span>
       
 <span class="current-icon">
               <img src="" 
@@ -51,7 +51,7 @@
                  
               <span id="current-description"></span>
               </li>
-              <li> Wind speed: <span id="wind-speed"></span> Km/H</li>
+              <li> Wind speed: <span id="wind-speed"></span> m/s</li>
               <li> Humidity: <span id="humidity"></span> %</li>
             </ul>
           </div>
