--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
       <div class="footnote">
 <small>
-      <a href="https://github.com/IlzeRieba/shecodes_vanilla_weather_app" target="_blank">
+      <a href="https://github.com/IlzeRieba/shecodes_vanilla_weather_app.git" target="_blank">
         Open source code
       </a>
       by Ilze Rieba
